tests/ui/sized/recursive-type-2.stderr
error[E0391]: cycle detected when computing layout of `Foo<()>`
   |
   = note: ...which immediately requires computing layout of `Foo<()>` again
note: cycle used when elaborating drops for `main`
  --> $DIR/recursive-type-2.rs:11:1
   |
LL | fn main() {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
